fix: make changes after text overflow check

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -107,6 +107,7 @@
     color: transparent;
     background-clip: text;
     background-image: radial-gradient(at top left, $primary-red 1%, $text-gradient-dark 50%);
+    word-break: break-all;
 
     @media (min-width: $tablet-width-min) {
       font-size: 70px;
@@ -122,6 +123,7 @@
     display: block;
     color: #2e35ac;
     line-height: 20px;
+    word-break: break-all;
   }
 
   h3 {
