--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -73,6 +73,7 @@
   font-size: 48px;
   line-height: 54px;
   text-transform: uppercase;
+  word-break: break-all;
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: 100px;
@@ -153,6 +154,7 @@
   display: block;
   font-family: $main-font;
   font-weight: 300;
+  word-break: break-all;
 
   @media (max-width: $mobile-width-max) {
     font-size: 16px;
